# Tree-barks-generation

./: .gitignore  README.md
DepthReinforcedSPADE/: README.md  train.py
DepthReinforcedSPADE-master/: test.py
DepthReinforcedSPADE-master/data/: custom_dataset.py  pix2pix_dataset.py
DepthReinforcedSPADE-master/models/: dual_model.py
DepthReinforcedSPADE-master/trainers/: pix2pix_trainer.py
DepthReinforcedSPADE-master/util/: visualizer.py
DepthReinforcedSPADE/models/: pix2pix_model.py
DepthReinforcedSPADE/options/: base_options.py  train_options.py
DepthReinforcedSPADE/util/: util.py
ReconstructionPipeline/: OpticalFlow.py  README.md  process_seg.sh
ReconstructionPipeline-master/: process_trees.sh  seg_postprocessing.py
TrunkSegmentation/: cmd_train.txt  tools.py
TrunkSegmentation-main/: README.md  cmd_test.txt  cst.py  palette.py
TrunkSegmentation-main/datasets/: test_data.py  toto_mat.py
TrunkSegmentation-main/eval/: elf.py  seg.py  seg_survey.py  show_lake.py
TrunkSegmentation-main/models/: elfnet.py  resnet.py
TrunkSegmentation-main/pth/: get.sh
TrunkSegmentation-main/scripts/: seg.sh  test.sh  train.sh  val.sh
TrunkSegmentation-main/train/: val_pspnet.py
TrunkSegmentation-main/utils/: segmentor.py
TrunkSegmentation/datasets/: dataset_configs.py  lake.py  test_sift.py
TrunkSegmentation/eval/: seg_lake.py  seg_retrieval.py  seg_trunk.py
TrunkSegmentation/train/: test.py  (+2 more)
maps_extraction/: README.md  convert_to_surface.py
maps_extraction-main/: CMakeLists.txt  README.md  process_pc.sh
maps_extraction-main/src/: pc_tree.cpp
(+15 files in other folders)
